-
Bug
-
Resolution: Fixed
-
P1: Critical
-
5.15.2, 6.5.3
-
None
-
-
49308d5d0 (dev), d6c5a3113 (6.8), 8502e870f (tqtc/lts-6.5)
Hi, I think I have been through a bug in the MouseArea
first point: It is about onPositionChanged signal. I can't find out why this signal is not triggered when the mouse enters for the first time in the MouseArea. I did not see this behavior if I use the mouseDrag function instead of mouseMove.
second point: on the project I linked the onExited signal triggers inexplicably in the middle of the test
this is the kind of output I got
```
QDEBUG : MouseArea::test_mouse_move() qml: move to -1,-1
QDEBUG : MouseArea::test_mouse_move() qml: move to 25,25
QDEBUG : MouseArea::test_mouse_move() qml: onEntered
QDEBUG : MouseArea::test_mouse_move() qml: move to 50,50
QDEBUG : MouseArea::test_mouse_move() qml: onPositionChanged 50 , 50
QDEBUG : MouseArea::test_mouse_move() qml: move to 100,100
QDEBUG : MouseArea::test_mouse_move() qml: onExited
QDEBUG : MouseArea::test_mouse_move() qml: move to 150,150
QDEBUG : MouseArea::test_mouse_move() qml: onEntered
QDEBUG : MouseArea::test_mouse_move() qml: move to 175,175
QDEBUG : MouseArea::test_mouse_move() qml: onPositionChanged 175 , 175
```
~same output with Qt 5.15.2 as Qt 6.5.3~
erratum: the second point shows up only with Qt6. The rest of the bug remains unchanged
What do you think ? Am I missing something ?
For Gerrit Dashboard: QTBUG-127122 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
603061,4 | Emit pointChanged when entering mouseArea; improve test | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
604314,2 | Emit pointChanged when entering mouseArea; improve test | 6.8 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
604717,2 | Emit pointChanged when entering mouseArea; improve test | tqtc/lts-6.5 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |