Emit pointChanged when entering mouseArea; improve test

MouseArea didn't emit pointChanged when entering mouseArea.

Now tst_QQuickMouseArea::hoverPosition() expects mouseX, mouseY and
pointChanged signals to be emitted when the mouse enters. Also stopped
depending on root properties in the test: there's nothing wrong with
checking MouseArea using its own API, in its own autotest where we have
the #include.

Fixes: QTBUG-127122
Change-Id: I76ee3160ebc2970f8ddd20a4fc531a4d6a16a50b
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>
(cherry picked from commit 49308d5d048a8d7bcf1557db0fd6ccf1460fa042)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit d6c5a31136d4d0d213ac6a3a4fa069ab410b523b)